--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 </head>
 <body>
     <h1>Hello World!</h1>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Est blanditiis excepturi aperiam ratione repudiandae distinctio quas consectetur, nostrum incidunt veniam nulla, minus ea dolorem ad magnam placeat. Sit, hic quis.</p>
 </body>
 </html>
